[project]
name = "webonomicon"
version = "0.1.29"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "flask",
    "flask-cors",
    "html5validator",
    "httpx",
    "jinja2",
    "loguru",
    "markdown",
    "mccole",
    "polars",
    "prettytable",
    "pyjwt",
    "pypika",
    "pytest",
    "python-fasthtml",
    "python-multipart",
    "ruff",
    "selenium",
    "snailz",
    "structlog"
]

[tool.ruff.lint.extend-per-file-ignores]
"**/test_*.py" = ["F401", "F811"] # ignore complaints about unused imports for fixtures

[tool.mccole]
skips = [
    "99_cert/CA.*",
    "99_cert/server.*",
    "*.csv",
    "*.html",
    "*.js",
    "*.json",
    "*.mk",
    "*.py",
    "*.sh",
    "*.sql",
    "*.tbl",
    "*.text",
    "*.txt",
    "unused/**",
    "uv.lock"
]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"CONTRIBUTING.md" = "contrib"
"LICENSE.md" = "license"
"bibliography.md" = "bibliography"
"glossary.md" = "glossary"
